[gd_scene load_steps=20 format=3 uid="uid://dwx23lkbhy5gw"]

[ext_resource type="Script" path="res://UI/Leaderboard/Leaderboard.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://w57mv4quu8j1" path="res://UI/Leaderboard/ScoreEntry/ScoreEntry.tscn" id="2_rwihr"]
[ext_resource type="Texture2D" uid="uid://cb7cnilm5shk8" path="res://assets/ButtonsV3/SmallButtonDown.png" id="3"]
[ext_resource type="FontFile" uid="uid://dawfg0re1svew" path="res://assets/VT323/VT323-Regular.ttf" id="4"]
[ext_resource type="Script" path="res://UI/SafeControl/safe_control.gd" id="4_7axui"]
[ext_resource type="Texture2D" uid="uid://xfa1vu6ckvuw" path="res://assets/ButtonsV3/SmallButtonUp.png" id="6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88h2d"]
bg_color = Color(0, 0, 0, 0.705882)

[sub_resource type="StyleBoxEmpty" id="6"]

[sub_resource type="StyleBoxEmpty" id="7"]

[sub_resource type="StyleBoxEmpty" id="8"]

[sub_resource type="StyleBoxEmpty" id="9"]

[sub_resource type="StyleBoxEmpty" id="10"]

[sub_resource type="Theme" id="11"]
resource_local_to_scene = true
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = SubResource("6")
VScrollBar/styles/grabber_highlight = SubResource("7")
VScrollBar/styles/grabber_pressed = SubResource("8")
VScrollBar/styles/scroll = SubResource("9")
VScrollBar/styles/scroll_focus = SubResource("10")

[sub_resource type="Curve2D" id="14"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -32, 0, 0, 0, 0, -32, 0, 0, 0, 0, 0, 0, 32, 0, 0, 0, 0, 32, 0, 0, 0, 0, 0, 0, -32)
}
point_count = 5

[sub_resource type="Curve" id="15"]
_data = [Vector2(0.0045819, 0.936937), 0.0, 0.0, 0, 0, Vector2(0.973654, 0.0945946), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="16"]

[sub_resource type="Curve" id="17"]
_data = [Vector2(0.0284091, 0.918513), 0.0, 0.0, 0, 0, Vector2(0.920455, 0.0851798), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="18"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:progress_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kt1ir"]
_data = {
"spinner": SubResource("18")
}

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
ScoreEntry = ExtResource("2_rwihr")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.584314, 0.345098, 0.945098, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("4_7axui")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 64
text = "Leaderboard"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_88h2d")

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="Titles" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/VBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rank" type="Label" parent="MarginContainer/VBoxContainer/Panel/VBox/MarginContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 36
text = "Rank"

[node name="Player" type="Label" parent="MarginContainer/VBoxContainer/Panel/VBox/MarginContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 36
text = "Player"

[node name="Score" type="Label" parent="MarginContainer/VBoxContainer/Panel/VBox/MarginContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 36
text = "Score"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("11")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingPath" type="Path2D" parent="MarginContainer/VBoxContainer/Panel/Control"]
scale = Vector2(2, 2)
curve = SubResource("14")

[node name="PathFollow2D" type="PathFollow2D" parent="MarginContainer/VBoxContainer/Panel/Control/LoadingPath"]
position = Vector2(0, -32)
rotation = 2.35619

[node name="SecondLayer" type="CPUParticles2D" parent="MarginContainer/VBoxContainer/Panel/Control/LoadingPath/PathFollow2D"]
position = Vector2(0, 9.53674e-07)
amount = 32
lifetime = 0.5
preprocess = 1.0
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_min = 4.0
scale_amount_max = 6.0
scale_amount_curve = SubResource("15")
color_ramp = SubResource("16")

[node name="FirstLayer" type="CPUParticles2D" parent="MarginContainer/VBoxContainer/Panel/Control/LoadingPath/PathFollow2D"]
amount = 32
lifetime = 0.5
preprocess = 1.0
spread = 180.0
gravity = Vector2(0, 0)
scale_amount_min = 10.0
scale_amount_max = 12.0
scale_amount_curve = SubResource("17")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/VBoxContainer/Panel/Control/LoadingPath"]
libraries = {
"": SubResource("AnimationLibrary_kt1ir")
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Replay" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("6")
texture_pressed = ExtResource("3")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Replay"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Replay/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 48
text = "Play"

[node name="MainMenu" type="TextureButton" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
texture_normal = ExtResource("6")
texture_pressed = ExtResource("3")

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/MainMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/MainMenu/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4")
theme_override_font_sizes/font_size = 48
text = "Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/Replay" to="." method="_on_Replay_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
